--- a/app/bundles/CoreBundle/Assets/css/app/less/layouts/header.less
+++ b/app/bundles/CoreBundle/Assets/css/app/less/layouts/header.less
@@ -302,6 +302,11 @@
 
       // dropdown alignment
       .open .dropdown-menu {
+        left: 0;
+        right: auto;
+      }
+      // dropdown-custom alignment
+      .open.dropdown-custom .dropdown-menu {
         left: 15px;
         right: auto;
       }
@@ -311,6 +316,11 @@
 
       // dropdown alignment
       .open .dropdown-menu {
+        left: auto;
+        right: 0;
+      }
+      // dropdown-custom alignment
+      .open.dropdown-custom .dropdown-menu {
         left: auto;
         right: 15px;
       }
